<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <group android:id="@+id/questionmenu" >
        <item
            android:id="@+id/editquestionnare"
            android:icon="@drawable/edit"
            android:showAsAction="ifRoom"
            android:title="@string/edit"/>
        <item
            android:id="@+id/ok"
            android:icon="@drawable/done"
            android:showAsAction="ifRoom"
            android:title="@string/select"/>
        <item
            android:id="@+id/delete"
            android:icon="@drawable/delete"
            android:title="@string/delete"
            android:showAsAction="ifRoom"/>
    </group>
    <group
        android:id="@+id/editmenu"
        android:visible="false" >
        <item
            android:id="@+id/save"
            android:title="@string/save"
            android:icon="@drawable/save"
            android:showAsAction="ifRoom"/>
    </group>

</menu>